force-app/main/default/objects/Assignment__c/Assignment__c.object-meta.xml
<CustomObject>
    <description>Practitioner assignment to a Subsidy Application. OwnerId = the Practitioner User (settles INT-019 Q-019-1). Private OWD — practitioner sees own via ownership.</description>
    <label>Assignment</label>
    <nameField>
        <displayFormat>ASN-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>