force-app/main/default/objects/Assignment__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <description>Set to NOW() on Status → Accepted (via Flow/trigger). Consumed by INT-010's SLA clock.</description>
    <label>Accepted Date</label>
    <type>DateTime</type>
</CustomField>