force-app/main/default/objects/Assignment__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup (not Master-Detail) to preserve Assignment__c Private OWD for practitioner isolation. Rolled-up counts move to an Apex trigger or a downstream summary; see decisions/2026-09-29-INT-009-assignment-lookup.md.</description>
    <label>Application</label>
    <referenceTo>Subsidy_Application__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>