force-app/main/default/objects/Assignment__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Assigned Date</label>
    <type>DateTime</type>
</CustomField>