force-app/main/default/objects/Assignment__c/fields/Practitioner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Contact__c</fullName>
    <description>The practitioner Contact (populated by before-insert trigger from Owner:User.Contact). Enables Current_Load__c summary on Contact and queries that filter by Contact directly.</description>
    <label>Practitioner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>