force-app/main/default/objects/Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Assigned</fullName><default>true</default><label>Assigned</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Reassigned</fullName><default>false</default><label>Reassigned</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>